# Ultraviolet

./: Cargo.toml
.github/workflows/: ci.yml
backend/src/builtins/: constants.rs  functions.rs
backend/src/eval/: conditional_op.rs  mod.rs  variables.rs
core/src/types/backend/: mod.rs
crates/frontend/src/ast/: mod.rs
examples/: file copy.uv  file.uv
frontend/src/: lib.rs  types.rs
frontend/src/ast/: conditional_op.rs  functions.rs  loops.rs  math_op.rs  mod.rs  type_parser.rs  types.rs  values.rs  variables.rs
frontend/src/errors/: error_renderer.rs  mod.rs
frontend/src/lexer/: mod.rs
frontend/src/tokens_parser/: mod.rs  types.rs
